@@ -5,4 +5,5 @@
  <property name="default_charset">iso-8859-15</property>
  <property name="email_from_address">cpsmanager@example.com</property>
  <property name="email_from_name">CPS Manager</property>
+ <property name="use_catalog_for_folder_contents">False</property>
 </site>
