@@ -9,4 +9,5 @@ Bug fixes
 -
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
-- 
+- Added the use_catalog_for_folder_contents in the portal properties and default
+  profile.
